package hust.hedspi.oop.game.utils;

public interface IObserver {
    void onNotify(Object... args);
}
