@startuml
skinparam classAttributeIconSize 0
skinparam monochrome false
skinparam packageStyle rectangle

package "hust.hedspi.oop.game.utils" {

    interface ISubject {
        + addObserver(observer: IObserver): void
        + removeObserver(observer: IObserver): void
        + notifyObservers(args: Object...): void
    }

    interface IObserver {
        + onNotify(args: Object...): void
    }
}

package "hust.hedspi.oop.game.managers" {
    class TimeManager {
        - observers: List<IObserver>
        + update(dt: float): void
        - incrementTime(): void
    }
}

package "hust.hedspi.oop.game.entities" {
    abstract class Cat {
        - observers: List<IObserver>
        + decreaseHp(amount: int): void
        + increaseEnergy(amount: int): void
    }
}

package "hust.hedspi.oop.game.screens.hud" {
    class TimeHUD {
        - timeLabel: Label
        + onNotify(args: Object...): void
    }

    class PlayerHUD {
        - hpLabel: Label
        - energyLabel: Label
        - hungerLabel: Label
        + onNotify(args: Object...): void
    }
}

ISubject <|.. TimeManager
ISubject <|.. Cat
IObserver <|.. TimeHUD
IObserver <|.. PlayerHUD

TimeManager "1" o--> "many" IObserver : sends notification
Cat "1" o--> "many" IObserver : sends notification

note bottom of TimeHUD
  UI chỉ cập nhật chữ khi Manager
  nháy tín hiệu onNotify() để tránh 
  hao tổn tài nguyên CPU mỗi frame.
end note

@enduml